# game_of_life

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
cmake/: cmake_utils.cmake
src/: CMakeLists.txt  args_parser.cpp  args_parser.hpp  game_engine.hpp  game_settings.hpp  life.m.cpp  rules_engine.cpp  rules_engine.g.cpp  rules_engine.hpp  ui.hpp
src/fields/: field.g.cpp  field.hpp  filed.hpp
src/printers/: stream_printer.cpp  stream_printer.g.cpp  stream_printer.hpp
src/utils/: args_parser.cpp  args_parser.g.cpp  args_parser.hpp
